ChangeLog for Simple Chat Client
========================= 

Version dev (unknown)
================================
* Added emoticons hint
* Added commands hint
* Added new default avatars
* Added extra channels list button
* Added alt+1..0 key modifier
* Added alt+left and alt+right key modifier
* Fixed updates
* Fixed nicklist margins
* Fixed tab order
* Fixed white space characeters
* Fixed join/rejoin speed
* Fixed opening url
* Dynamic font height in inputline
* Added whois icons

Version 1.8.1 (24.07.2013)
================================
* Fixed offline messages
* Fixed invite focus

Version 1.8.0 (08.06.2013)
================================
* Added join channel button
* Added updates in options
* Added auto connect in options
* Added hide nicklist in options
* Added /clear command
* Added time to invite list
* Fixed animated icon
* Changed default emoticons,sounds dir
* Added nick option in context menu
* Fixed avatar display
* Fixed sound
* Fixed offline messages
* Many bugfixes

Version 1.7.3 (07.04.2013)
================================
* Fixed replace emoticons
* Fixed logs
* Fixed commands

Version 1.7.2 (24.03.2013)
================================
* Fixed replace emoticons
* Fixed notes

Version 1.7.1 (23.03.2013)
================================
* Fixed replace emoticons
* Fixed reconnect
* Fixed avatars bug

Version 1.7.0 (15.02.2013)
================================
* Added theme dialog
* Faster reconnect after wrong login
* Added auto away turn off button
* Added commands description
* Added ctrl+shift arround
* Changed reconnect from 30 sec to 120 sec
* Changed reconnect without closing channels
* Fixed offline messages layout
* Fixed moderation
* Many bugfixes

Version 1.6.2 (04.12.2012)
================================
* Fixed auth
* Fixed edit profile

Version 1.6.1 (30.10.2012)
================================
* Fixed rank

Version 1.6.0 (29.10.2012)
================================
* Addded rank
* Added new emoticons
* Updated layouts