@@ -38,6 +38,7 @@ namespace Convert
     void removeStyles(QString &strData);
     void convertText(QString &strData, bool bInsertWidthHeight = false, bool qWebViewContext = false);
     void convertPrefix(QString &strData);
+    void fixTopicUrl(QString &strData);
 
     bool isBold(const QString &strData);
     bool isItalic(const QString &strData);
